# gpt-terminal-personas-python

./: .env  .env-example  .env_example  .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/ai/: __init__.py  gpt3.py  openai_model.py
app/character/: __init__.py  character.py  personas.py
app/database/: storage.py
app/database/user/: user_memory_storage.py  user_mock.py
app/presentation/controllers/: user_controller.py
app/speech/: coquiai_speech.py  openai_whisper_speech.py  pyttsx_speech.py  sound.py
gpt3-terminal/: main.py
gpt3-terminal/character/: __init__.py  character.py  personas.py
gpt3-terminal/openai/: __init__.py  gpt3.py  openai_connector.py  openai_model.py
gpt3-terminal/speech/: __init__.py  aws_speech.py  elevenlabs_speech.py  openai_whisper_speech.py  play-sound.py  pyttsx_speech.py  speech.py
